--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="itunes">
   <head>
+    
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.css">
@@ -16,7 +17,15 @@
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
               <input type="text" class="form-control" ng-model="artist" placeholder="Artist Name" >
-              <button class="btn btn-primary" ng-click="getSongData()"> Submit </button>
+              <button class="btn btn-primary" ng-click="getSongData(artist)"> Submit </button>
+              <div class="dropdown">
+              <button onclick="myFunction()" class="btn btn-primary" id="dropbtn">Media</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Search by Artist</a>
+                    <a href="#">Search by Song</a>
+                    <a href="#">Search by Movie</a>
+                  </div>
+                </div>
             </div>
           </form>
         </div>
@@ -32,5 +41,6 @@
     <script src="js/app.js"></script>
     <script src="js/mainCtrl.js"></script>
     <script src="js/itunesService.js"></script>
+    <script src="js/animate.js"></script>
   </body>
 </html>
